# tptt

./: .buildinfo  .buildinfo.bak  .env_template  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.tmp  requirements.txt  search.html  searchindex.js  setup.py  tptt.html
.github/workflows/: ci.yml  docs.yml
_sources/: index.rst.txt
configs/: titanesque_config.yaml
docs/: Makefile  README.md  liza-evaluate.md  liza-from-scratch.md  liza-training.md  paper_note.ipynb  slides.md
docs/paper/: chunk_code2.tex  fig.tex  fig_.tex  main.tex  main_fr.tex  paper_note.ipynb  refs.bib
docs/source/: conf.py  index.rst
liza/: __init__.py  attention.py  attention_operator.py  config.py  fla.py  init.py  injection.py  injector.py  linear_attention.py  mpa.py  utils.py
scripts/: README.md  config.yaml  liza-brainstorming-training.ipynb  liza-typer-training.ipynb  make_to_hub.py  plot.py  tptt-liza-evaluation.ipynb  tptt-liza-integration-testing.ipynb  tptt-liza-testing.ipynb  tptt-liza-training.ipynb  train.py  training_config.py
scripts/explore/: Linear_Attention_Torch.ipynb
src/tptt/: __init__.py  config.py  configuration_tptt.py  injection.py  model.py  modeling_tptt.py  train_tptt.py  tuner.py  utils.py
src/tptt/liza/: attention_forward.py  mapping.py  mapping_func.py  memory_gate.py  (+1 more)
test/: conftest.py  test_attention.py  test_injection.py
tests/: conftest.py  test_attention.py  test_attention_operator.py  test_cache_memory.py  test_configuration.py  test_fla_operator.py  test_injection.py  test_injector.py  test_linear_attention.py  test_mapping_func.py  test_memory_gate.py  test_model.py  test_modeling.py  test_modeling_tptt.py  test_safetensor.py  test_tuner.py  test_utils.py
tests/liza/: test_mapping.py  test_mapping_func.py  test_memory_gate.py  test_utils.py
