[project]
name = "tptt"
version = "0.1.0"
description = "TPTT : Transforming Pretrained Transformers into Titans"
authors = [
    {name = "fabienfrfr",email = "fabien.furfaro@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "flash-linear-attention (>=0.2.1,<0.3.0)",
    "einops (>=0.8.1,<0.9.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "peft (>=0.15.2,<0.16.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "dataset (>=1.6.2,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
